--- a/index.html
+++ b/index.html
@@ -243,6 +243,19 @@
 
     </div>
 
+    
+    <div class="rodape">
+        <footer class="footer">
+
+
+            <strong>Pace Indústria Mecânica. Grupo Pulcinelli. 2018.</strong>
+
+
+        </footer>
+
+    </div>
+
+
 
 
 
